--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     <title>Седона</title>
   </head>
   <body class="body">
@@ -66,13 +67,13 @@
       <nav class="menu">
         <ul class="menu__list">
           <li class="menu__item menu-item">
-            <a class="menu-item__link--current" href="/index.html">Главная</a>
+            <a class="menu-item__link--current" href="index.html">Главная</a>
           </li>
           <li class="menu__item menu-item">
             <a class="menu-item__link" href="#">Фото и видео</a>
           </li>
           <li class="menu__item menu-item">
-            <a class="menu-item__link" href="/form.html">Форма отзыва</a>
+            <a class="menu-item__link" href="form.html">Форма отзыва</a>
           </li>
           <li class="menu__item menu-item">
             <a class="menu-item__link" href="#">HTML academy</a>
@@ -84,7 +85,7 @@
       <div class="baner">
         <img
           class="baner__image"
-          src="/img/baner-desktop@1x.jpg"
+          src="img/baner-desktop@1x.jpg"
           alt="Горы Седоны"
         />
         <svg
