Map and baner were moved to background-image

--- a/index.html
+++ b/index.html
@@ -83,11 +83,6 @@
     </header>
     <main class="main">
       <div class="baner">
-        <img
-          class="baner__image"
-          src="img/baner-desktop@1x.jpg"
-          alt="Горы Седоны"
-        />
         <svg
           class="baner__text"
           width="460"
@@ -270,10 +265,9 @@
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие
           предложения гостиниц в седоне
         </p>
-        <a class="intrest__button" href="#">Найти гостиницу</a>
+        <a class="intrest__button button" href="#">Найти гостиницу</a>
       </section>
       <div class="map">
-        <img class="map__image" src="/img/map@1x.jpg" alt="Карта Седоны" />
         <div class="map__marker"></div>
       </div>
     </main>
