All images were moved to background-image style

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
         </p>
         <ol class="reason__list">
-          <li class="reason__item">
+          <li class="reason-item">
             <article class="reason-card reason-card--blue">
               <h3 class="reason-card__header">Настоящий городок</h3>
               <p class="reason-card__number">
@@ -121,11 +121,7 @@
               <p class="reason-card__description">
                 Седона не аттракцион для туристов, там течет своя жизнь
               </p>
-              <img
-                class="reason-card__image reason-card__image--right"
-                src="/img/photo-city@1x.jpg"
-                alt="Фото Седоны"
-              />
+              <div class="reason-card__image reason-card__image--city reason-card__image--right">
               <div class="reason-card__subitem reason-subitem">
                 <ul class="reason-subitem__list">
                   <li class="reason-subitem__item">
@@ -215,11 +211,7 @@
               <p class="reason-card__description">
                 Да, по нему можно пройти! Если вы осмелитесь, конечно
               </p>
-              <img
-                class="reason-card__image reason-card__image--right"
-                src="/img/photo-bridge@1x.jpg"
-                alt="Фото моста дьявола"
-              />
+              <div class="reason-card__image reason-card__image--bridge reason-card__image--right">
             </article>
           </li>
           <li class="reason-item">
