--- a/form.html
+++ b/form.html
@@ -123,7 +123,7 @@
             </svg>
           </a>
         </li>
-        <li>
+        <li class="social-networks__item social-networks-item">
           <a class="social-networks-item__link" href="#">
             <svg
               class="social-networks-item__icon"
@@ -138,7 +138,7 @@
             </svg>
           </a>
         </li>
-        <li>
+        <li class="social-networks__item social-networks-item">
           <a class="social-networks-item__link" href="#">
             <svg
               class="social-networks-item__icon"
