--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             </svg>
           </a>
         </li>
-        <li>
+        <li class="social-networks__item social-networks-item">
           <a class="social-networks-item__link" href="#">
             <svg
               class="social-networks-item__icon"
@@ -298,7 +298,7 @@
             </svg>
           </a>
         </li>
-        <li>
+        <li class="social-networks__item social-networks-item">
           <a class="social-networks-item__link" href="#">
             <svg
               class="social-networks-item__icon"
