Layout for reason-card was fixed

--- a/index.html
+++ b/index.html
@@ -83,15 +83,17 @@
       </p>
       <ol class="reason__list">
         <li class="reason-item">
-          <article class="reason-card reason-card--blue">
-            <h3 class="reason-card__header">Настоящий городок</h3>
-            <p class="reason-card__number">
-              — №1 —
-            </p>
-            <p class="reason-card__description">
-              Седона не аттракцион для туристов, там течет своя жизнь
-            </p>
-            <div class="reason-card__image reason-card__image--city reason-card__image--right"></div>
+          <article class="reason-card">
+            <div class="reason-card__main reason-card__main--blue">
+              <h3 class="reason-card__header">Настоящий городок</h3>
+              <p class="reason-card__number">
+                — №1 —
+              </p>
+              <p class="reason-card__description">
+                Седона не аттракцион для туристов, там течет своя жизнь
+              </p>
+              <div class="reason-card__image reason-card__image--city reason-card__image--right"></div>
+            </div>
             <div class="reason-card__subitem reason-subitem">
               <ul class="reason-subitem__list">
                 <li class="reason-subitem__item">
@@ -148,48 +150,56 @@
           </article>
         </li>
         <li class="reason-item">
-          <article class="reason-card reason-card--blue">
-            <h3 class="reason-card__header">Там есть Мост дьявола</h3>
-            <p class="reason-card__number">
-              — №2 —
-            </p>
-            <p class="reason-card__description">
-              Да, по нему можно пройти! Если вы осмелитесь, конечно
-            </p>
-            <div class="reason-card__image reason-card__image--bridge reason-card__image--right"></div>
+          <article class="reason-card">
+            <div class="reason-card__main reason-card__main--blue">
+              <h3 class="reason-card__header">Там есть Мост дьявола</h3>
+              <p class="reason-card__number">
+                — №2 —
+              </p>
+              <p class="reason-card__description">
+                Да, по нему можно пройти! Если вы осмелитесь, конечно
+              </p>
+              <div class="reason-card__image reason-card__image--bridge reason-card__image--right"></div>
+            </div>
+          </article>
+        </li>
+        <li class="reason-item">
+          <article class="reason-card">
+            <div class="reason-card__main reason-card__main--gray">
+              <h3 class="reason-card__header">Небольшая площадь</h3>
+              <p class="reason-card__number">
+                — №3 —
+              </p>
+              <p class="reason-card__description">
+                Все интересные места находятся очень близко
+              </p>
+            </div>
+          </article>
+        </li>
+        <li class="reason-item">
+          <article class="reason-card">
+            <div class="reason-card__main reason-card__main--gray">
+              <h3 class="reason-card__header">Красивая дорога</h3>
+              <p class="reason-card__number">
+                — №4 —
+              </p>
+              <p class="reason-card__description">
+                Ехать в седону из лас-вегаса совсем не скучно!
+              </p>
+            </div>
           </article>
         </li>
         <li class="reason-item">
           <article class="reason-card reason-card--gray">
-            <h3 class="reason-card__header">Небольшая площадь</h3>
-            <p class="reason-card__number">
-              — №3 —
-            </p>
-            <p class="reason-card__description">
-              Все интересные места находятся очень близко
-            </p>
-          </article>
-        </li>
-        <li class="reason-item">
-          <article class="reason-card reason-card--gray">
-            <h3 class="reason-card__header">Красивая дорога</h3>
-            <p class="reason-card__number">
-              — №4 —
-            </p>
-            <p class="reason-card__description">
-              Ехать в седону из лас-вегаса совсем не скучно!
-            </p>
-          </article>
-        </li>
-        <li class="reason-item">
-          <article class="reason-card reason-card--gray">
-            <h3 class="reason-card__header">Мало туристов</h3>
-            <p class="reason-card__number">
-              — №5 —
-            </p>
-            <p class="reason-card__description">
-              Большинство едет в гранд каньон и толпится там
-            </p>
+            <div class="reason-card__main reason-card__main--gray">
+              <h3 class="reason-card__header">Мало туристов</h3>
+              <p class="reason-card__number">
+                — №5 —
+              </p>
+              <p class="reason-card__description">
+                Большинство едет в гранд каньон и толпится там
+              </p>
+            </div>
           </article>
         </li>
       </ol>
