--- a/index.html
+++ b/index.html
@@ -98,51 +98,57 @@
               <ul class="reason-subitem__list">
                 <li class="reason-subitem__item">
                   <article class="reason-subitem-card">
-                    <svg class="reason-subitem-card__image" width="75" height="70" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="reason-subitem-card__image" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd"
-                        d="M29.263 63.128h15.871v-23.1H29.263v23.1Zm12.895-2.803H32.14V42.83h10.02v17.495ZM37.199 33.84c-4.166 0-7.638-3.383-7.638-7.539s3.372-7.442 7.638-7.442c4.265 0 7.737 3.286 7.737 7.442 0 4.156-3.472 7.54-7.737 7.54Zm4.96-7.539c0-2.706-2.282-4.833-4.96-4.833s-4.96 2.224-4.96 4.833c0 2.707 2.282 4.833 4.96 4.833 2.777 0 4.96-2.223 4.96-4.833Z" />
+                        d="M15.902 34.804h8.353V22.646h-8.353v12.158Zm6.787-1.475h-5.273V24.12h5.273v9.208ZM20.078 19.39c-2.192 0-4.02-1.781-4.02-3.968 0-2.188 1.775-3.918 4.02-3.918 2.245 0 4.073 1.73 4.073 3.918 0 2.187-1.828 3.968-4.073 3.968Zm2.61-3.968c0-1.425-1.2-2.544-2.61-2.544s-2.61 1.17-2.61 2.544c0 1.424 1.2 2.543 2.61 2.543 1.462 0 2.61-1.17 2.61-2.543Z" />
                       <path
-                        d="M19.74 40.028h-2.976v3.77h2.976v-3.77ZM22.617 40.028h2.976v3.77h-2.976v-3.77ZM19.74 45.825h-2.976v3.77h2.976v-3.77ZM22.617 45.825h2.976v3.77h-2.976v-3.77ZM51.384 40.028h-2.976v3.77h2.976v-3.77ZM54.36 40.028h2.976v3.77H54.36v-3.77ZM51.384 45.825h-2.976v3.77h2.976v-3.77ZM54.36 45.825h2.976v3.77H54.36v-3.77Z" />
+                        d="M10.89 22.646H9.322v1.984h1.566v-1.984ZM12.404 22.646h1.566v1.984h-1.566v-1.984ZM10.89 25.698H9.322v1.983h1.566v-1.983ZM12.404 25.698h1.566v1.983h-1.566v-1.983ZM27.544 22.646h-1.566v1.984h1.566v-1.984ZM29.11 22.646h1.567v1.984H29.11v-1.984ZM27.544 25.698h-1.566v1.983h1.566v-1.983ZM29.11 25.698h1.567v1.983H29.11v-1.983Z" />
                       <path fill-rule="evenodd" clip-rule="evenodd"
-                        d="m72.017 38.093 2.083-2.03-9.82-9.569V.398H50.59v12.758L37 .011 0 36.16l2.083 2.03 7.737-7.54v36.536H5.952v2.803h63.387v-2.803h-5.06V30.554l7.738 7.539ZM53.467 3.297h7.837v20.395l-7.837-7.636V3.297Zm7.837 63.792H12.796V27.751L37 4.07l24.304 23.68v39.338Z" />
+                        d="m38.404 21.628 1.096-1.069-5.169-5.036V1.788h-7.205v6.715l-7.152-6.918L.5 20.61l1.096 1.069L5.67 17.71V36.94H3.633v1.475h33.361V36.94h-2.663V17.66l4.073 3.968ZM28.64 3.314h4.124v10.734l-4.124-4.019V3.314Zm4.124 33.575H7.235V16.185L19.974 3.72l12.791 12.464v20.704Z" />
                     </svg>
-                    <h4 class="reason-subitem-card__header">
-                      Жилье
-                    </h4>
-                    <p class="reason-subitem-card__description">
-                      Рекомендуем пожить в настоящем мотеле, все как в кино!
-                    </p>
+                    <div class="reason-subitem-card__content">
+                      <h4 class="reason-subitem-card__header">
+                        Жилье
+                      </h4>
+                      <p class="reason-subitem-card__description">
+                        Рекомендуем пожить в настоящем мотеле, все как в кино!
+                      </p>
+                    </div>
                   </article>
                 </li>
                 <li class="reason-subitem__item">
                   <article class="reason-subitem-card">
-                    <svg class="reason-subitem-card__image" width="62" height="73" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="reason-subitem-card__image" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
                       <path
-                        d="M58.698 21.291H35.15c13.125-6.544 14.187-10.682 13.704-12.992-1.062-3.753-5.404-6.64-9.458-5.1-5.308 2.02-6.755 9.912-8.203 15.59-1.834-5.774-3.57-13.088-7.72-16.841C22.314.888 20.576-.17 17.97.023c-3.86.385-9.36 5.1-7.045 10.393 2.124 5.1 9.169 8.373 13.898 10.971H3.302A2.694 2.694 0 0 0 .6 24.082V34.86c0 1.54 1.255 2.695 2.702 2.695h.29V72.2h55.01V37.555h.096A2.694 2.694 0 0 0 61.4 34.86V24.082c0-1.54-1.255-2.791-2.702-2.791ZM40.94 5.605c2.027-.29 4.73 1.25 5.019 3.08.386 2.598-3.185 5.003-4.826 6.062-2.412 1.636-4.729 2.502-6.948 3.85.772-3.561 2.413-12.415 6.755-12.992Zm-21.81 9.43c-2.124-1.443-6.177-4.234-6.08-7.41.096-3.464 5.5-6.255 8.396-3.656C25.113 7.143 26.85 14.554 28.2 19.75c-3.088-1.54-5.983-2.694-9.071-4.715Zm5.694 54.278H6.39V37.555h18.433v31.758Zm0-34.645H3.495v-10.49h21.329v10.49Zm9.65 34.645h-6.852V24.178h6.852v45.135Zm21.232 0H37.37V37.555h18.433v31.758h-.097Zm2.799-34.645H37.37v-10.49h21.135v10.49Z" />
+                        d="M34.578 11.206H22.184c6.908-3.444 7.467-5.622 7.213-6.838-.559-1.975-2.845-3.495-4.978-2.685-2.794 1.064-3.556 5.218-4.317 8.206-.965-3.04-1.88-6.889-4.064-8.864-.61-.557-1.524-1.114-2.895-1.013-2.032.203-4.927 2.684-3.708 5.47 1.117 2.685 4.825 4.407 7.314 5.775H5.422c-.812 0-1.422.658-1.422 1.418v5.672c0 .811.66 1.419 1.422 1.419h.153V38h28.952V19.766h.05c.814 0 1.423-.659 1.423-1.418v-5.673c0-.81-.66-1.47-1.422-1.47ZM25.232 2.95c1.066-.152 2.489.658 2.641 1.62.203 1.368-1.676 2.634-2.54 3.192-1.27.86-2.489 1.316-3.657 2.026.407-1.874 1.27-6.534 3.556-6.838Zm-11.48 4.964c-1.117-.76-3.25-2.23-3.2-3.9.051-1.824 2.896-3.293 4.42-1.925 1.93 1.671 2.844 5.571 3.555 8.306-1.625-.81-3.15-1.418-4.775-2.481ZM16.75 36.48H7.048V19.765h9.701V36.48Zm0-18.235H5.524v-5.52h11.225v5.52Zm5.08 18.235h-3.607V12.724h3.607V36.48Zm11.174 0h-9.65V19.765h9.701V36.48h-.05Zm1.473-18.235H23.352v-5.52h11.124v5.52Z" />
                     </svg>
-                    <h4 class="reason-subitem-card__header">
-                      Сувениры
-                    </h4>
-                    <p class="reason-subitem-card__description">
-                      Не только китайского, но и местного производства!
-                    </p>
+                    <div class="reason-subitem-card__content">
+                      <h4 class="reason-subitem-card__header">
+                        Сувениры
+                      </h4>
+                      <p class="reason-subitem-card__description">
+                        Не только китайского, но и местного производства!
+                      </p>
+                    </div>
                   </article>
                 </li>
                 <li class="reason-subitem__item">
                   <article class="reason-subitem-card">
-                    <svg class="reason-subitem-card__image" width="76" height="68" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="reason-subitem-card__image" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
                       <path
-                        d="M71.711 45.116H4.29C1.895 45.116 0 47.04 0 49.254v3.369c0 2.213 1.895 4.042 4.289 4.042h.997v.962c0 5.293 4.488 9.528 9.874 9.528h45.68c5.486 0 9.874-4.33 9.874-9.528v-.962h.997c2.294 0 4.289-1.829 4.289-4.139v-3.368c0-2.117-1.895-4.042-4.289-4.042Zm-3.89 12.511c0 3.657-3.091 6.64-6.881 6.64H15.06c-3.79 0-6.882-2.983-6.882-6.64v-.962h59.644v.962Zm5.187-5.1c0 .673-.599 1.25-1.297 1.25H4.29c-.698 0-1.297-.577-1.297-1.25v-3.37c0-.576.599-1.154 1.297-1.154H71.81c.698 0 1.297.578 1.297 1.251v3.272h-.1ZM16.157 37.32l5.386 3.85 5.486-3.85 5.485 3.85L38 37.32l5.386 3.85 5.485-3.85 5.486 3.85 5.486-3.85 5.485 3.85 6.284-4.524-1.696-2.31-4.588 3.176-5.485-3.85-5.486 3.85-5.486-3.85-5.485 3.85L38 33.662l-5.486 3.85-5.485-3.85-5.486 3.85-5.386-3.85-5.485 3.85-4.588-3.176-1.795 2.31 6.383 4.523 5.485-3.85ZM70.714 30.776c0-.578.1-2.502 0-2.887C70.016 12.875 55.654.845 38 .845c-17.654 0-32.115 12.03-32.814 27.044v2.887h65.528ZM38 3.732c15.958 0 29.123 10.78 29.722 24.157H8.179C8.877 14.51 22.041 3.732 38 3.732Z" />
+                        d="M37.743 25.85H2.257C.997 25.85 0 26.864 0 28.03V29.8c0 1.165.997 2.128 2.257 2.128h.525v.506c0 2.786 2.362 5.015 5.197 5.015h24.042c2.887 0 5.197-2.28 5.197-5.015v-.506h.525c1.207 0 2.257-.962 2.257-2.178v-1.773c0-1.115-.997-2.128-2.257-2.128Zm-2.047 6.585c0 1.925-1.628 3.495-3.622 3.495H7.927c-1.995 0-3.623-1.57-3.623-3.495v-.506h31.392v.506Zm2.73-2.684c0 .354-.316.658-.683.658H2.257c-.367 0-.682-.304-.682-.658v-1.773c0-.304.315-.608.682-.608h35.538c.368 0 .683.304.683.659v1.722h-.053ZM8.504 21.747l2.835 2.026 2.887-2.026 2.887 2.026L20 21.747l2.835 2.026 2.887-2.026 2.887 2.026 2.887-2.026 2.887 2.026 3.307-2.38-.892-1.216-2.415 1.672-2.887-2.026-2.887 2.026-2.887-2.026-2.887 2.026L20 19.823l-2.887 2.026-2.887-2.026-2.887 2.026-2.835-2.026-2.887 2.026-2.415-1.672-.945 1.216 3.36 2.38 2.887-2.026ZM37.218 18.303c0-.304.052-1.317 0-1.52C36.85 8.883 29.29 2.55 20 2.55S3.097 8.882 2.73 16.784v1.52h34.488ZM20 4.07c8.399 0 15.328 5.673 15.643 12.714H4.304C4.672 9.743 11.601 4.07 20 4.07Z" />
                       <path
-                        d="M38 17.206c1.102 0 1.995-.862 1.995-1.925 0-1.063-.893-1.925-1.995-1.925s-1.995.862-1.995 1.925c0 1.063.893 1.925 1.995 1.925ZM30.021 12.49c1.102 0 1.995-.862 1.995-1.925 0-1.063-.893-1.925-1.995-1.925s-1.995.862-1.995 1.925c0 1.063.893 1.924 1.995 1.924ZM45.979 12.49c1.102 0 1.995-.862 1.995-1.925 0-1.063-.893-1.925-1.995-1.925s-1.995.862-1.995 1.925c0 1.063.893 1.924 1.995 1.924Z" />
+                        d="M20 11.161c.58 0 1.05-.453 1.05-1.013 0-.56-.47-1.013-1.05-1.013-.58 0-1.05.454-1.05 1.013 0 .56.47 1.013 1.05 1.013ZM15.8 8.679c.58 0 1.05-.454 1.05-1.013 0-.56-.47-1.013-1.05-1.013-.58 0-1.05.453-1.05 1.013 0 .56.47 1.013 1.05 1.013ZM24.2 8.679c.58 0 1.05-.454 1.05-1.013 0-.56-.47-1.013-1.05-1.013-.58 0-1.05.453-1.05 1.013 0 .56.47 1.013 1.05 1.013Z" />
                     </svg>
-                    <h4 class="reason-subitem-card__header">
-                      Еда
-                    </h4>
-                    <p class="reason-subitem-card__description">
-                      Всегда заказывайте фирменный бургер, вы не
-                      разочаруетесь!
-                    </p>
+                    <div class="reason-subitem-card__content">
+                      <h4 class="reason-subitem-card__header">
+                        Еда
+                      </h4>
+                      <p class="reason-subitem-card__description">
+                        Всегда заказывайте фирменный бургер, вы не
+                        разочаруетесь!
+                      </p>
+                    </div>
                   </article>
                 </li>
               </ul>
