--- a/form.html
+++ b/form.html
@@ -67,13 +67,13 @@
       <nav class="menu">
         <ul class="menu__list">
           <li class="menu__item menu-item">
-            <a class="menu-item__link--current" href="/index.html">Главная</a>
+            <a class="menu-item__link" href="/index.html">Главная</a>
           </li>
           <li class="menu__item menu-item">
             <a class="menu-item__link" href="#">Фото и видео</a>
           </li>
           <li class="menu__item menu-item">
-            <a class="menu-item__link" href="/form.html">Форма отзыва</a>
+            <a class="menu-item__link menu-item__link--current" href="/form.html">Форма отзыва</a>
           </li>
           <li class="menu__item menu-item">
             <a class="menu-item__link" href="#">HTML academy</a>
