--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <nav class="menu">
       <ul class="menu__list">
         <li class="menu__item menu-item">
-          <a class="menu-item__link--current" href="/index.html">Главная</a>
+          <a class="menu-item__link menu-item__link--current" href="/index.html">Главная</a>
         </li>
         <li class="menu__item menu-item">
           <a class="menu-item__link" href="#">Фото и видео</a>
