baner was renamed to banner

--- a/form.html
+++ b/form.html
@@ -82,9 +82,9 @@
       </nav>
     </header>
     <main class="main">
-      <div class="baner">
+      <div class="banner">
         <svg
-          class="baner__text"
+          class="banner__text"
           width="460"
           height="80"
           xmlns="http://www.w3.org/2000/svg"
