Flex styles were added to interest

--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
       <h2 class="interest__header">
         Заинтересовались?
       </h2>
-      <p class="intrest__description">
+      <p class="interest__description">
         Укажите предполагаемые даты поездки, и мы покажем вам лучшие
         предложения гостиниц в седоне
       </p>
-      <a class="intrest__button button" href="#">Найти гостиницу</a>
+      <a class="interest__button button" href="#">Найти гостиницу</a>
     </section>
     <div class="map">
       <div class="map__marker"></div>
