developed-by was renamed to copyright

--- a/form.html
+++ b/form.html
@@ -154,11 +154,11 @@
           </a>
         </li>
       </ul>
-      <p class="footer__developed developed-by">
-        <a class="developed-by__link developed-by-link" href="#">
+      <p class="footer__developed copyright">
+        <a class="copyright__link copyright-link" href="#">
           Разработано
           <svg
-            class="developed-by-link__image"
+            class="copyright-link__image"
             width="28"
             height="34"
             xmlns="http://www.w3.org/2000/svg"
