--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
         </a>
       </li>
     </ul>
-    <p class="footer__developed developed-by">
-      <a class="developed-by__link developed-by-link" href="#">
+    <p class="footer__developed copyright">
+      <a class="copyright__link copyright-link" href="#">
         Разработано
-        <svg class="developed-by-link__image" width="28" height="34" xmlns="http://www.w3.org/2000/svg">
+        <svg class="copyright-link__image" width="28" height="34" xmlns="http://www.w3.org/2000/svg">
           <title>HTML School логотип</title>
           <path
             d="M14.15-.05h-.1L.55 1.35v24.7l13.5 8 13.4-8V1.35l-13.3-1.4Zm11.4 12.1-11.5-6.8v-.1h-.1l-.1-.1v.1l-11.4 6.9v-9l11.5-1.2 11.6 1.2v9Zm-11.6-5.3 11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1-11.4-6.7 11.4-6.8Zm-11.5 8.3 11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9-11.5-6.8v-9.9Z" />
