copyright-link__text class was created

--- a/form.html
+++ b/form.html
@@ -156,7 +156,7 @@
       </ul>
       <p class="footer__developed copyright">
         <a class="copyright__link copyright-link" href="#">
-          Разработано
+          <span class="copyright-link__text">Разработано</span>
           <svg
             class="copyright-link__image"
             width="28"
