--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </ul>
     <p class="footer__developed copyright">
       <a class="copyright__link copyright-link" href="#">
-        Разработано
+        <span class="copyright-link__text">Разработано</span>
         <svg class="copyright-link__image" width="28" height="34" xmlns="http://www.w3.org/2000/svg">
           <title>HTML School логотип</title>
           <path
