--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" type="text/css" href="/style.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
   <title>Седона</title>
 </head>
 
@@ -46,13 +46,13 @@
     <nav class="menu">
       <ul class="menu__list">
         <li class="menu__item menu-item">
-          <a class="menu-item__link menu-item__link--current" href="/index.html">Главная</a>
+          <a class="menu-item__link menu-item__link--current" href="index.html">Главная</a>
         </li>
         <li class="menu__item menu-item">
           <a class="menu-item__link" href="#">Фото и видео</a>
         </li>
         <li class="menu__item menu-item">
-          <a class="menu-item__link" href="/form.html">Форма отзыва</a>
+          <a class="menu-item__link" href="form.html">Форма отзыва</a>
         </li>
         <li class="menu__item menu-item">
           <a class="menu-item__link" href="#">HTML academy</a>
