--- a/form.html
+++ b/form.html
@@ -46,16 +46,24 @@
     <nav class="menu">
       <ul class="menu__list">
         <li class="menu__item menu-item">
-          <a class="menu-item__link" href="index.html">Главная</a>
+          <a class="menu-item__link" href="index.html">
+            <span class="menu-item__text">Главная</span>
+          </a>
         </li>
         <li class="menu__item menu-item">
-          <a class="menu-item__link" href="#">Фото и видео</a>
+          <a class="menu-item__link" href="#">
+            <span class="menu-item__text">Фото и видео</span>
+          </a>
         </li>
         <li class="menu__item menu-item">
-          <a class="menu-item__link menu-item__link--current" href="form.html">Форма отзыва</a>
+          <a class="menu-item__link menu-item__link--current" href="form.html">
+            <span class="menu-item__text">Форма отзыва</span>
+          </a>
         </li>
         <li class="menu__item menu-item">
-          <a class="menu-item__link" href="#">HTML academy</a>
+          <a class="menu-item__link" href="#">
+            <span class="menu-item__text">HTML academy</span>
+          </a>
         </li>
       </ul>
     </nav>
