images were made not part of reason-card

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
               <p class="reason-card__description">
                 Седона не аттракцион для туристов, там течет своя жизнь
               </p>
-              <div class="reason-card__image reason-card__image--city reason-card__image--right"></div>
             </div>
+            <div class="reason-card__image reason-card__image--city reason-card__image--right"></div>
             <div class="reason-card__subitem reason-subitem">
               <ul class="reason-subitem__list">
                 <li class="reason-subitem__item">
@@ -173,11 +173,11 @@
               <p class="reason-card__description">
                 Да, по нему можно пройти! Если вы осмелитесь, конечно
               </p>
-              <div class="reason-card__image reason-card__image--bridge reason-card__image--right"></div>
             </div>
+            <div class="reason-card__image reason-card__image--bridge reason-card__image--right"></div>
           </article>
         </li>
-        <li class="reason-item">
+        <li class="reason-item reason-item__delimitered">
           <article class="reason-card">
             <div class="reason-card__main reason-card__main--gray">
               <h3 class="reason-card__header">Небольшая площадь</h3>
@@ -190,7 +190,7 @@
             </div>
           </article>
         </li>
-        <li class="reason-item">
+        <li class="reason-item reason-item__delimitered">
           <article class="reason-card">
             <div class="reason-card__main reason-card__main--gray">
               <h3 class="reason-card__header">Красивая дорога</h3>
@@ -203,8 +203,8 @@
             </div>
           </article>
         </li>
-        <li class="reason-item">
-          <article class="reason-card reason-card--gray">
+        <li class="reason-item reason-item__delimitered">
+          <article class="reason-card">
             <div class="reason-card__main reason-card__main--gray">
               <h3 class="reason-card__header">Мало туристов</h3>
               <p class="reason-card__number">
