--- a/index.html
+++ b/index.html
@@ -106,14 +106,16 @@
               <ul class="reason-subitem__list">
                 <li class="reason-subitem__item">
                   <article class="reason-subitem-card">
-                    <svg class="reason-subitem-card__image" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
-                      <path fill-rule="evenodd" clip-rule="evenodd"
-                        d="M15.902 34.804h8.353V22.646h-8.353v12.158Zm6.787-1.475h-5.273V24.12h5.273v9.208ZM20.078 19.39c-2.192 0-4.02-1.781-4.02-3.968 0-2.188 1.775-3.918 4.02-3.918 2.245 0 4.073 1.73 4.073 3.918 0 2.187-1.828 3.968-4.073 3.968Zm2.61-3.968c0-1.425-1.2-2.544-2.61-2.544s-2.61 1.17-2.61 2.544c0 1.424 1.2 2.543 2.61 2.543 1.462 0 2.61-1.17 2.61-2.543Z" />
-                      <path
-                        d="M10.89 22.646H9.322v1.984h1.566v-1.984ZM12.404 22.646h1.566v1.984h-1.566v-1.984ZM10.89 25.698H9.322v1.983h1.566v-1.983ZM12.404 25.698h1.566v1.983h-1.566v-1.983ZM27.544 22.646h-1.566v1.984h1.566v-1.984ZM29.11 22.646h1.567v1.984H29.11v-1.984ZM27.544 25.698h-1.566v1.983h1.566v-1.983ZM29.11 25.698h1.567v1.983H29.11v-1.983Z" />
-                      <path fill-rule="evenodd" clip-rule="evenodd"
-                        d="m38.404 21.628 1.096-1.069-5.169-5.036V1.788h-7.205v6.715l-7.152-6.918L.5 20.61l1.096 1.069L5.67 17.71V36.94H3.633v1.475h33.361V36.94h-2.663V17.66l4.073 3.968ZM28.64 3.314h4.124v10.734l-4.124-4.019V3.314Zm4.124 33.575H7.235V16.185L19.974 3.72l12.791 12.464v20.704Z" />
-                    </svg>
+                    <div class="reason-subitem-card__wrapper">
+                      <svg class="reason-subitem-card__image" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                          d="M15.902 34.804h8.353V22.646h-8.353v12.158Zm6.787-1.475h-5.273V24.12h5.273v9.208ZM20.078 19.39c-2.192 0-4.02-1.781-4.02-3.968 0-2.188 1.775-3.918 4.02-3.918 2.245 0 4.073 1.73 4.073 3.918 0 2.187-1.828 3.968-4.073 3.968Zm2.61-3.968c0-1.425-1.2-2.544-2.61-2.544s-2.61 1.17-2.61 2.544c0 1.424 1.2 2.543 2.61 2.543 1.462 0 2.61-1.17 2.61-2.543Z" />
+                        <path
+                          d="M10.89 22.646H9.322v1.984h1.566v-1.984ZM12.404 22.646h1.566v1.984h-1.566v-1.984ZM10.89 25.698H9.322v1.983h1.566v-1.983ZM12.404 25.698h1.566v1.983h-1.566v-1.983ZM27.544 22.646h-1.566v1.984h1.566v-1.984ZM29.11 22.646h1.567v1.984H29.11v-1.984ZM27.544 25.698h-1.566v1.983h1.566v-1.983ZM29.11 25.698h1.567v1.983H29.11v-1.983Z" />
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                          d="m38.404 21.628 1.096-1.069-5.169-5.036V1.788h-7.205v6.715l-7.152-6.918L.5 20.61l1.096 1.069L5.67 17.71V36.94H3.633v1.475h33.361V36.94h-2.663V17.66l4.073 3.968ZM28.64 3.314h4.124v10.734l-4.124-4.019V3.314Zm4.124 33.575H7.235V16.185L19.974 3.72l12.791 12.464v20.704Z" />
+                      </svg>
+                    </div>
                     <div class="reason-subitem-card__content">
                       <h4 class="reason-subitem-card__header">
                         Жилье
@@ -126,10 +128,12 @@
                 </li>
                 <li class="reason-subitem__item">
                   <article class="reason-subitem-card">
-                    <svg class="reason-subitem-card__image" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
-                      <path
-                        d="M34.578 11.206H22.184c6.908-3.444 7.467-5.622 7.213-6.838-.559-1.975-2.845-3.495-4.978-2.685-2.794 1.064-3.556 5.218-4.317 8.206-.965-3.04-1.88-6.889-4.064-8.864-.61-.557-1.524-1.114-2.895-1.013-2.032.203-4.927 2.684-3.708 5.47 1.117 2.685 4.825 4.407 7.314 5.775H5.422c-.812 0-1.422.658-1.422 1.418v5.672c0 .811.66 1.419 1.422 1.419h.153V38h28.952V19.766h.05c.814 0 1.423-.659 1.423-1.418v-5.673c0-.81-.66-1.47-1.422-1.47ZM25.232 2.95c1.066-.152 2.489.658 2.641 1.62.203 1.368-1.676 2.634-2.54 3.192-1.27.86-2.489 1.316-3.657 2.026.407-1.874 1.27-6.534 3.556-6.838Zm-11.48 4.964c-1.117-.76-3.25-2.23-3.2-3.9.051-1.824 2.896-3.293 4.42-1.925 1.93 1.671 2.844 5.571 3.555 8.306-1.625-.81-3.15-1.418-4.775-2.481ZM16.75 36.48H7.048V19.765h9.701V36.48Zm0-18.235H5.524v-5.52h11.225v5.52Zm5.08 18.235h-3.607V12.724h3.607V36.48Zm11.174 0h-9.65V19.765h9.701V36.48h-.05Zm1.473-18.235H23.352v-5.52h11.124v5.52Z" />
-                    </svg>
+                    <div class="reason-subitem-card__wrapper">
+                      <svg class="reason-subitem-card__image" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M34.578 11.206H22.184c6.908-3.444 7.467-5.622 7.213-6.838-.559-1.975-2.845-3.495-4.978-2.685-2.794 1.064-3.556 5.218-4.317 8.206-.965-3.04-1.88-6.889-4.064-8.864-.61-.557-1.524-1.114-2.895-1.013-2.032.203-4.927 2.684-3.708 5.47 1.117 2.685 4.825 4.407 7.314 5.775H5.422c-.812 0-1.422.658-1.422 1.418v5.672c0 .811.66 1.419 1.422 1.419h.153V38h28.952V19.766h.05c.814 0 1.423-.659 1.423-1.418v-5.673c0-.81-.66-1.47-1.422-1.47ZM25.232 2.95c1.066-.152 2.489.658 2.641 1.62.203 1.368-1.676 2.634-2.54 3.192-1.27.86-2.489 1.316-3.657 2.026.407-1.874 1.27-6.534 3.556-6.838Zm-11.48 4.964c-1.117-.76-3.25-2.23-3.2-3.9.051-1.824 2.896-3.293 4.42-1.925 1.93 1.671 2.844 5.571 3.555 8.306-1.625-.81-3.15-1.418-4.775-2.481ZM16.75 36.48H7.048V19.765h9.701V36.48Zm0-18.235H5.524v-5.52h11.225v5.52Zm5.08 18.235h-3.607V12.724h3.607V36.48Zm11.174 0h-9.65V19.765h9.701V36.48h-.05Zm1.473-18.235H23.352v-5.52h11.124v5.52Z" />
+                      </svg>
+                    </div>
                     <div class="reason-subitem-card__content">
                       <h4 class="reason-subitem-card__header">
                         Сувениры
@@ -142,12 +146,14 @@
                 </li>
                 <li class="reason-subitem__item">
                   <article class="reason-subitem-card">
-                    <svg class="reason-subitem-card__image" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
-                      <path
-                        d="M37.743 25.85H2.257C.997 25.85 0 26.864 0 28.03V29.8c0 1.165.997 2.128 2.257 2.128h.525v.506c0 2.786 2.362 5.015 5.197 5.015h24.042c2.887 0 5.197-2.28 5.197-5.015v-.506h.525c1.207 0 2.257-.962 2.257-2.178v-1.773c0-1.115-.997-2.128-2.257-2.128Zm-2.047 6.585c0 1.925-1.628 3.495-3.622 3.495H7.927c-1.995 0-3.623-1.57-3.623-3.495v-.506h31.392v.506Zm2.73-2.684c0 .354-.316.658-.683.658H2.257c-.367 0-.682-.304-.682-.658v-1.773c0-.304.315-.608.682-.608h35.538c.368 0 .683.304.683.659v1.722h-.053ZM8.504 21.747l2.835 2.026 2.887-2.026 2.887 2.026L20 21.747l2.835 2.026 2.887-2.026 2.887 2.026 2.887-2.026 2.887 2.026 3.307-2.38-.892-1.216-2.415 1.672-2.887-2.026-2.887 2.026-2.887-2.026-2.887 2.026L20 19.823l-2.887 2.026-2.887-2.026-2.887 2.026-2.835-2.026-2.887 2.026-2.415-1.672-.945 1.216 3.36 2.38 2.887-2.026ZM37.218 18.303c0-.304.052-1.317 0-1.52C36.85 8.883 29.29 2.55 20 2.55S3.097 8.882 2.73 16.784v1.52h34.488ZM20 4.07c8.399 0 15.328 5.673 15.643 12.714H4.304C4.672 9.743 11.601 4.07 20 4.07Z" />
-                      <path
-                        d="M20 11.161c.58 0 1.05-.453 1.05-1.013 0-.56-.47-1.013-1.05-1.013-.58 0-1.05.454-1.05 1.013 0 .56.47 1.013 1.05 1.013ZM15.8 8.679c.58 0 1.05-.454 1.05-1.013 0-.56-.47-1.013-1.05-1.013-.58 0-1.05.453-1.05 1.013 0 .56.47 1.013 1.05 1.013ZM24.2 8.679c.58 0 1.05-.454 1.05-1.013 0-.56-.47-1.013-1.05-1.013-.58 0-1.05.453-1.05 1.013 0 .56.47 1.013 1.05 1.013Z" />
-                    </svg>
+                    <div class="reason-subitem-card__wrapper">
+                      <svg class="reason-subitem-card__image" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M37.743 25.85H2.257C.997 25.85 0 26.864 0 28.03V29.8c0 1.165.997 2.128 2.257 2.128h.525v.506c0 2.786 2.362 5.015 5.197 5.015h24.042c2.887 0 5.197-2.28 5.197-5.015v-.506h.525c1.207 0 2.257-.962 2.257-2.178v-1.773c0-1.115-.997-2.128-2.257-2.128Zm-2.047 6.585c0 1.925-1.628 3.495-3.622 3.495H7.927c-1.995 0-3.623-1.57-3.623-3.495v-.506h31.392v.506Zm2.73-2.684c0 .354-.316.658-.683.658H2.257c-.367 0-.682-.304-.682-.658v-1.773c0-.304.315-.608.682-.608h35.538c.368 0 .683.304.683.659v1.722h-.053ZM8.504 21.747l2.835 2.026 2.887-2.026 2.887 2.026L20 21.747l2.835 2.026 2.887-2.026 2.887 2.026 2.887-2.026 2.887 2.026 3.307-2.38-.892-1.216-2.415 1.672-2.887-2.026-2.887 2.026-2.887-2.026-2.887 2.026L20 19.823l-2.887 2.026-2.887-2.026-2.887 2.026-2.835-2.026-2.887 2.026-2.415-1.672-.945 1.216 3.36 2.38 2.887-2.026ZM37.218 18.303c0-.304.052-1.317 0-1.52C36.85 8.883 29.29 2.55 20 2.55S3.097 8.882 2.73 16.784v1.52h34.488ZM20 4.07c8.399 0 15.328 5.673 15.643 12.714H4.304C4.672 9.743 11.601 4.07 20 4.07Z" />
+                        <path
+                          d="M20 11.161c.58 0 1.05-.453 1.05-1.013 0-.56-.47-1.013-1.05-1.013-.58 0-1.05.454-1.05 1.013 0 .56.47 1.013 1.05 1.013ZM15.8 8.679c.58 0 1.05-.454 1.05-1.013 0-.56-.47-1.013-1.05-1.013-.58 0-1.05.453-1.05 1.013 0 .56.47 1.013 1.05 1.013ZM24.2 8.679c.58 0 1.05-.454 1.05-1.013 0-.56-.47-1.013-1.05-1.013-.58 0-1.05.453-1.05 1.013 0 .56.47 1.013 1.05 1.013Z" />
+                      </svg>
+                    </div>
                     <div class="reason-subitem-card__content">
                       <h4 class="reason-subitem-card__header">
                         Еда
