reason__wrapper was created for unite paddings

--- a/index.html
+++ b/index.html
@@ -83,12 +83,14 @@
     </div>
     <h1 class="main__header">Главная</h1>
     <section class="reason">
-      <h2 class="reason__header">
-        Седона — небольшой городок в аризоне, заслуживающий большего!
-      </h2>
-      <p class="reason__description">
-        Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
-      </p>
+      <div class="reason__wrapper">
+        <h2 class="reason__header">
+          Седона — небольшой городок в аризоне, заслуживающий большего!
+        </h2>
+        <p class="reason__description">
+          Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
+        </p>
+      </div>
       <ol class="reason__list">
         <li class="reason-item">
           <article class="reason-card">
