reason-card__header--white was created

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <li class="reason-item">
           <article class="reason-card">
             <div class="reason-card__main reason-card__main--blue">
-              <h3 class="reason-card__header">Настоящий городок</h3>
+              <h3 class="reason-card__header reason-card__header--white">Настоящий городок</h3>
               <p class="reason-card__number">
                 — №1 —
               </p>
@@ -174,7 +174,7 @@
         <li class="reason-item">
           <article class="reason-card">
             <div class="reason-card__main reason-card__main--blue">
-              <h3 class="reason-card__header">Там есть Мост дьявола</h3>
+              <h3 class="reason-card__header reason-card__header--white">Там есть Мост дьявола</h3>
               <p class="reason-card__number">
                 — №2 —
               </p>
