visually-hidden class was created

--- a/form.html
+++ b/form.html
@@ -135,19 +135,19 @@
         <ul class="form__list form-list">
           <li class="form-list__item form-item">
             <label class="form-item__label form-label">
-              <input class="form-item__input" type="radio" name="feedback" value="positive" checked />
+              <input class="form-item__input visually-hidden" type="radio" name="feedback" value="positive" checked />
               <span class="form-label__text">Скорее положительное</span>
             </label>
           </li>
           <li class="form-list__item form-item">
             <label class="form-item__label form-label">
-              <input class="form-item__input" type="radio" name="feedback" value="negative" />
+              <input class="form-item__input visually-hidden" type="radio" name="feedback" value="negative" />
               <span class="form-label__text">Скорее отрицательное</span>
             </label>
           </li>
           <li class="form-list__item form-item">
             <label class="form-item__label form-label">
-              <input class="form-item__input" type="radio" name="feedback" value="unknown" />
+              <input class="form-item__input visually-hidden" type="radio" name="feedback" value="unknown" />
               <span class="form-label__text">Затрудняюсь ответить</span>
             </label>
           </li>
@@ -158,25 +158,25 @@
         <ul class="form__list form-list">
           <li class="form-list__item form-item">
             <label class="form-item__label form-label">
-              <input class="form-item__input" type="checkbox" name="isDevilBridgeWasVisited" />
+              <input class="form-item__input visually-hidden" type="checkbox" name="isDevilBridgeWasVisited" />
               <span class="form-label__text">Мост Дьявола</span>
             </label>
           </li>
           <li class="form-list__item form-item">
             <label class="form-item__label form-label">
-              <input class="form-item__input" type="checkbox" name="isBellMountainWasVisited" />
+              <input class="form-item__input visually-hidden" type="checkbox" name="isBellMountainWasVisited" />
               <span class="form-label__text">Гора-колокол</span>
             </label>
           </li>
           <li class="form-list__item form-item">
             <label class="form-item__label form-label">
-              <input class="form-item__input" type="checkbox" name="isSlideParkWasVisited" />
+              <input class="form-item__input visually-hidden" type="checkbox" name="isSlideParkWasVisited" />
               <span class="form-label__text">Слайд-парк</span>
             </label>
           </li>
           <li class="form-list__item form-item">
             <label class="form-item__label form-label">
-              <input class="form-item__input" type="checkbox" name="areRedRocksWereVisited" />
+              <input class="form-item__input visually-hidden" type="checkbox" name="areRedRocksWereVisited" />
               <span class="form-label__text">Красные скалы</span>
             </label>
           </li>
