Styled form-checkbox was created

--- a/form.html
+++ b/form.html
@@ -134,22 +134,22 @@
         <legend class="form__legend">Ваше общее впечатление:</legend>
         <ul class="form__list form-list">
           <li class="form-list__item form-item">
-            <label class="form-item__label form-label form-label--radio">
+            <label class="form-item__label form-label form-label--checkable">
               <input class="form-item__input visually-hidden" type="radio" name="feedback" value="positive" checked />
               <span class="form-item__radio"></span>
               <span class="form-label__text">Скорее положительное</span>
             </label>
           </li>
           <li class="form-list__item form-item">
-            <label class="form-item__label form-label">
-              <input class="form-item__input visually-hidden form-label--radio" type="radio" name="feedback" value="negative" />
+            <label class="form-item__label form-label form-label--checkable">
+              <input class="form-item__input visually-hidden" type="radio" name="feedback" value="negative" />
               <span class="form-item__radio"></span>
               <span class="form-label__text">Скорее отрицательное</span>
             </label>
           </li>
           <li class="form-list__item form-item">
-            <label class="form-item__label form-label">
-              <input class="form-item__input visually-hidden form-label--radio" type="radio" name="feedback" value="unknown" />
+            <label class="form-item__label form-label form-label--checkable">
+              <input class="form-item__input visually-hidden" type="radio" name="feedback" value="unknown" />
               <span class="form-item__radio"></span>
               <span class="form-label__text">Затрудняюсь ответить</span>
             </label>
@@ -160,26 +160,50 @@
         <legend class="form__legend">Посещённые достопримечательности:</legend>
         <ul class="form__list form-list">
           <li class="form-list__item form-item">
-            <label class="form-item__label form-label">
+            <label class="form-item__label form-label form-label--checkable">
               <input class="form-item__input visually-hidden" type="checkbox" name="isDevilBridgeWasVisited" />
+              <span class="form-item__checkbox form-checkbox">
+                <svg class="form-checkbox__image" width="24" height="17" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="m22.925 1.325-1.1-1.1c-.3-.3-.9-.3-1.2 0l-11.9 11.9-6.2-6.2c-.3-.3-.9-.3-1.2 0l-1.1 1.1c-.3.3-.3.9 0 1.2l7.8 7.8c.2.2.4.2.6.2.2 0 .4-.1.6-.2l13.5-13.5c.5-.3.5-.8.2-1.2Z" />
+                </svg>
+              </span>
               <span class="form-label__text">Мост Дьявола</span>
             </label>
           </li>
           <li class="form-list__item form-item">
-            <label class="form-item__label form-label">
+            <label class="form-item__label form-label form-label--checkable">
               <input class="form-item__input visually-hidden" type="checkbox" name="isBellMountainWasVisited" />
+              <span class="form-item__checkbox form-checkbox">
+                <svg class="form-checkbox__image" width="24" height="17" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="m22.925 1.325-1.1-1.1c-.3-.3-.9-.3-1.2 0l-11.9 11.9-6.2-6.2c-.3-.3-.9-.3-1.2 0l-1.1 1.1c-.3.3-.3.9 0 1.2l7.8 7.8c.2.2.4.2.6.2.2 0 .4-.1.6-.2l13.5-13.5c.5-.3.5-.8.2-1.2Z" />
+                </svg>
+              </span>
               <span class="form-label__text">Гора-колокол</span>
             </label>
           </li>
           <li class="form-list__item form-item">
-            <label class="form-item__label form-label">
+            <label class="form-item__label form-label form-label--checkable">
               <input class="form-item__input visually-hidden" type="checkbox" name="isSlideParkWasVisited" />
+              <span class="form-item__checkbox form-checkbox">
+                <svg class="form-checkbox__image" width="24" height="17" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="m22.925 1.325-1.1-1.1c-.3-.3-.9-.3-1.2 0l-11.9 11.9-6.2-6.2c-.3-.3-.9-.3-1.2 0l-1.1 1.1c-.3.3-.3.9 0 1.2l7.8 7.8c.2.2.4.2.6.2.2 0 .4-.1.6-.2l13.5-13.5c.5-.3.5-.8.2-1.2Z" />
+                </svg>
+              </span>
               <span class="form-label__text">Слайд-парк</span>
             </label>
           </li>
           <li class="form-list__item form-item">
-            <label class="form-item__label form-label">
+            <label class="form-item__label form-label form-label--checkable">
               <input class="form-item__input visually-hidden" type="checkbox" name="areRedRocksWereVisited" />
+              <span class="form-item__checkbox form-checkbox">
+                <svg class="form-checkbox__image" width="24" height="17" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="m22.925 1.325-1.1-1.1c-.3-.3-.9-.3-1.2 0l-11.9 11.9-6.2-6.2c-.3-.3-.9-.3-1.2 0l-1.1 1.1c-.3.3-.3.9 0 1.2l7.8 7.8c.2.2.4.2.6.2.2 0 .4-.1.6-.2l13.5-13.5c.5-.3.5-.8.2-1.2Z" />
+                </svg>
+              </span>
               <span class="form-label__text">Красные скалы</span>
             </label>
           </li>
