form-label__text--bold style was created

--- a/form.html
+++ b/form.html
@@ -137,21 +137,21 @@
             <label class="form-item__label form-label form-label--checkable">
               <input class="form-item__input visually-hidden" type="radio" name="feedback" value="positive" checked />
               <span class="form-item__radio"></span>
-              <span class="form-label__text">Скорее положительное</span>
+              <span class="form-label__text form-label__text--bold">Скорее положительное</span>
             </label>
           </li>
           <li class="form-list__item form-item">
             <label class="form-item__label form-label form-label--checkable">
               <input class="form-item__input visually-hidden" type="radio" name="feedback" value="negative" />
               <span class="form-item__radio"></span>
-              <span class="form-label__text">Скорее отрицательное</span>
+              <span class="form-label__text form-label__text--bold">Скорее отрицательное</span>
             </label>
           </li>
           <li class="form-list__item form-item">
             <label class="form-item__label form-label form-label--checkable">
               <input class="form-item__input visually-hidden" type="radio" name="feedback" value="unknown" />
               <span class="form-item__radio"></span>
-              <span class="form-label__text">Затрудняюсь ответить</span>
+              <span class="form-label__text form-label__text--bold">Затрудняюсь ответить</span>
             </label>
           </li>
         </ul>
@@ -168,7 +168,7 @@
                     d="m22.925 1.325-1.1-1.1c-.3-.3-.9-.3-1.2 0l-11.9 11.9-6.2-6.2c-.3-.3-.9-.3-1.2 0l-1.1 1.1c-.3.3-.3.9 0 1.2l7.8 7.8c.2.2.4.2.6.2.2 0 .4-.1.6-.2l13.5-13.5c.5-.3.5-.8.2-1.2Z" />
                 </svg>
               </span>
-              <span class="form-label__text">Мост Дьявола</span>
+              <span class="form-label__text form-label__text--bold">Мост Дьявола</span>
             </label>
           </li>
           <li class="form-list__item form-item">
@@ -180,7 +180,7 @@
                     d="m22.925 1.325-1.1-1.1c-.3-.3-.9-.3-1.2 0l-11.9 11.9-6.2-6.2c-.3-.3-.9-.3-1.2 0l-1.1 1.1c-.3.3-.3.9 0 1.2l7.8 7.8c.2.2.4.2.6.2.2 0 .4-.1.6-.2l13.5-13.5c.5-.3.5-.8.2-1.2Z" />
                 </svg>
               </span>
-              <span class="form-label__text">Гора-колокол</span>
+              <span class="form-label__text form-label__text--bold">Гора-колокол</span>
             </label>
           </li>
           <li class="form-list__item form-item">
@@ -192,7 +192,7 @@
                     d="m22.925 1.325-1.1-1.1c-.3-.3-.9-.3-1.2 0l-11.9 11.9-6.2-6.2c-.3-.3-.9-.3-1.2 0l-1.1 1.1c-.3.3-.3.9 0 1.2l7.8 7.8c.2.2.4.2.6.2.2 0 .4-.1.6-.2l13.5-13.5c.5-.3.5-.8.2-1.2Z" />
                 </svg>
               </span>
-              <span class="form-label__text">Слайд-парк</span>
+              <span class="form-label__text form-label__text--bold">Слайд-парк</span>
             </label>
           </li>
           <li class="form-list__item form-item">
@@ -204,7 +204,7 @@
                     d="m22.925 1.325-1.1-1.1c-.3-.3-.9-.3-1.2 0l-11.9 11.9-6.2-6.2c-.3-.3-.9-.3-1.2 0l-1.1 1.1c-.3.3-.3.9 0 1.2l7.8 7.8c.2.2.4.2.6.2.2 0 .4-.1.6-.2l13.5-13.5c.5-.3.5-.8.2-1.2Z" />
                 </svg>
               </span>
-              <span class="form-label__text">Красные скалы</span>
+              <span class="form-label__text form-label__text--bold">Красные скалы</span>
             </label>
           </li>
         </ul>
