--- a/form.html
+++ b/form.html
@@ -118,15 +118,31 @@
           <li class="form-list__item form-item">
             <label class="form-item__label form-label form-label--column">
               <span class="form-label__text form-label__text--column">Контактный телефон*:</span>
-              <input class="form-item__input input__text" type="tel" name="phone" placeholder="Введите телефон"
-                pattern="[7,8]{1}[0-9]{10}" required />
+              <div class="form-label__wrapper">
+                <input class="form-item__input input__text" type="tel" name="phone" placeholder="Введите телефон"
+                  pattern="[7,8]{1}[0-9]{10}" required />
+                <div class="form-item__icon">
+                  <svg class="form-item__image" width="18" height="18" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M3.6 7.8c1.4 2.8 3.8 5.1 6.6 6.6l2.2-2.2c.3-.3.7-.4 1-.2 1.1.4 2.3.6 3.6.6.6 0 1 .4 1 1V17c0 .6-.4 1-1 1C7.6 18 0 10.4 0 1c0-.6.4-1 1-1h3.5c.6 0 1 .4 1 1 0 1.2.2 2.4.6 3.6.1.3 0 .7-.2 1L3.6 7.8Z" />
+                  </svg>
+                </div>
+              </div>
             </label>
           </li>
           <li class="form-list__item form-item">
             <label class="form-item__label form-label form-label--column">
               <span class="form-label__text form-label__text--column">Электронная почта*:</span>
-              <input class="form-item__input input__text" type="email" name="email" placeholder="Введите e-mail"
-                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,6}$" required />
+              <div class="form-label__wrapper">
+                <input class="form-item__input input__text" type="email" name="email" placeholder="Введите e-mail"
+                  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,6}$" required />
+                <div class="form-item__icon">
+                  <svg class="form-item__image" width="16" height="12" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M8 8c-.3 0-.5-.1-1-.3L0 4v7c0 .5.5 1 1 1h14c.5 0 1-.5 1-1V4L9 7.7c-.5.2-.7.3-1 .3Zm7-8H1C.5 0 0 .5 0 1v.8L8 6l8-4.2V1c0-.5-.5-1-1-1Z" />
+                  </svg>
+                </div>
+              </div>
             </label>
           </li>
       </fieldset>
