inputmode was added to all inputs on form page

--- a/form.html
+++ b/form.html
@@ -92,21 +92,21 @@
           <li class="form-list__item form-item">
             <label class="form-item__label form-label form-label--row">
               <span class="form-label__text form-label__text--row">Имя*:</span>
-              <input class="form-item__input input__text" type="text" name="FirstName" placeholder="Введите имя"
+              <input class="form-item__input input__text" type="text" inputmode="text" name="FirstName" placeholder="Введите имя"
                 minlength="4" maxlength="20" required />
             </label>
           </li>
           <li class="form-list__item form-item">
             <label class="form-item__label form-label form-label--row">
               <span class="form-label__text form-label__text--row">Фамилия*:</span>
-              <input class="form-item__input input__text" type="text" name="LastName" placeholder="Введите фамилию"
+              <input class="form-item__input input__text" type="text" inputmode="text" name="LastName" placeholder="Введите фамилию"
                 minlength="4" maxlength="30" required />
             </label>
           </li>
           <li class="form-list__item form-item">
             <label class="form-item__label form-label form-label--row">
               <span class="form-label__text form-label__text--row">Отчество:</span>
-              <input class="form-item__input input__text" type="text" name="MiddleName" placeholder="Введите отчество"
+              <input class="form-item__input input__text" type="text" inputmode="text" name="MiddleName" placeholder="Введите отчество"
                 minlength="4" maxlength="20" />
             </label>
           </li>
@@ -119,7 +119,7 @@
             <label class="form-item__label form-label form-label--column">
               <span class="form-label__text form-label__text--column">Контактный телефон*:</span>
               <div class="form-label__wrapper">
-                <input class="form-item__input input__text" type="tel" name="phone" placeholder="Введите телефон"
+                <input class="form-item__input input__text" type="tel" inputmode="tel" name="phone" placeholder="Введите телефон"
                   pattern="[7,8]{1}[0-9]{10}" required />
                 <div class="form-item__icon">
                   <svg class="form-item__image" width="18" height="18" xmlns="http://www.w3.org/2000/svg">
@@ -134,7 +134,7 @@
             <label class="form-item__label form-label form-label--column">
               <span class="form-label__text form-label__text--column">Электронная почта*:</span>
               <div class="form-label__wrapper">
-                <input class="form-item__input input__text" type="email" name="email" placeholder="Введите e-mail"
+                <input class="form-item__input input__text" type="email" inputmode="email" name="email" placeholder="Введите e-mail"
                   pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,6}$" required />
                 <div class="form-item__icon">
                   <svg class="form-item__image" width="16" height="12" xmlns="http://www.w3.org/2000/svg">
