span form__hint was added to form page

--- a/form.html
+++ b/form.html
@@ -230,7 +230,10 @@
         <textarea class="input__textarea" rows="8" cols="36"
           placeholder="Опишите подробнее все свои восторги"></textarea>
       </fieldset>
-      <button class="form__button button" type="submit">Отправить отзыв</button>
+      <div class="form__button-wrapper">
+        <button class="form__button button" type="submit">Отправить отзыв</button>
+        <span class="form__hint">* - обязательные поля</span>
+      </div>
     </form>
   </main>
   <footer class="footer">
