Added logo_image-border class for form.html

--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
     <a class="logo">
       <svg class="logo__image" width="186" height="98" xmlns="http://www.w3.org/2000/svg">
         <title>Логотип Седоны</title>
-        <path d="M186 0H0l80.241 90.209c7.077 7.875 18.54 7.875 25.618 0L186 0Z" fill="#81B3D3" />
+        <path class="logo__image-border" d="M186 0H0l80.241 90.209c7.077 7.875 18.54 7.875 25.618 0L186 0Z" fill="#81B3D3" />
         <path d="m43.061.698 49.44 58.212 49.142-57.814L43.061.698Z" fill="#23A9E1" />
         <path
           d="M121.608 17.244c-5.084 0-10.068.1-15.151.1 5.98-6.878 8.672-6.18 15.151-.1ZM80.54 22.627h26.614c-1.993-1.196-6.678-7.077-9.27-4.884-.2.2-7.476-8.872-12.26-4.486-4.187 3.788-6.08-.498-10.865 2.492-5.283 3.589 3.19 5.682 5.781 6.878Z"
