--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+  <script defer src="js/scripts.js"></script>
   <title>Седона</title>
 </head>
 
@@ -44,9 +45,9 @@
       </svg>
     </a>
     <nav class="menu">
-      <ul class="menu__list">
+      <ul id="menu-list" class="menu__list menu-list--showed">
         <li class="menu__item menu-item">
-          <a class="menu-item__link" href="index.html">
+          <a class="menu-item__link menu-item__link--current" href="index.html">
             <span class="menu-item__text">Главная</span>
           </a>
         </li>
@@ -56,7 +57,7 @@
           </a>
         </li>
         <li class="menu__item menu-item">
-          <a class="menu-item__link menu-item__link--current" href="form.html">
+          <a class="menu-item__link" href="form.html">
             <span class="menu-item__text">Форма отзыва</span>
           </a>
         </li>
@@ -66,6 +67,12 @@
           </a>
         </li>
       </ul>
+      <button id="menu-button" class="menu__toggle-button">
+        <span class="menu__button-line menu__button-line--first"></span>
+        <span class="menu__button-line menu__button-line--second"></span>
+        <span class="menu__button-line menu__button-line--third"></span>
+        Кнопка меню
+      </button>
     </nav>
   </header>
   <main class="main">
