--- a/index.html
+++ b/index.html
@@ -247,14 +247,16 @@
       </ol>
     </section>
     <section class="interest">
-      <h2 class="interest__header">
-        Заинтересовались?
-      </h2>
-      <p class="interest__description">
-        Укажите предполагаемые даты поездки, и мы покажем вам лучшие
-        предложения гостиниц в седоне
-      </p>
-      <a class="interest__button button" href="#">Найти гостиницу</a>
+      <div class="interest__wrapper">
+        <h2 class="interest__header">
+          Заинтересовались?
+        </h2>
+        <p class="interest__description">
+          Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+          предложения гостиниц в седоне
+        </p>
+        <a class="interest__button button" href="#">Найти гостиницу</a>
+      </div>
     </section>
     <div class="map">
       <div class="map__marker"></div>
