--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
   </main>
   <footer class="footer">
     <b class="footer__hashtag">#visitsedona</b>
-    <ul class="social-networks__list">
+    <ul class="footer__social-networks social-networks__list">
       <li class="social-networks__item social-networks-item">
         <a class="social-networks-item__link" href="#">
           <svg class="social-networks-item__icon" width="20" height="16" xmlns="http://www.w3.org/2000/svg">
