--- a/form.html
+++ b/form.html
@@ -45,7 +45,7 @@
       </svg>
     </a>
     <nav class="menu">
-      <ul id="menu-list" class="menu__list menu-list--showed">
+      <ul id="menu-list" class="menu__list">
         <li class="menu__item menu-item">
           <a class="menu-item__link menu-item__link--current" href="index.html">
             <span class="menu-item__text">Главная</span>
