--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         <p class="reason__description">
           Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
         </p>
-        <svg class="reason__separator" width="768" height="37" xmlns="http://www.w3.org/2000/svg">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M-225 0h384v37L-225 0ZM543 0H159v37L543 0Z">
-          </path>
+        <svg class="reason__separator" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 57">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="m-440 0 249.829 23.7V0L160.55 57H-440V0Zm600.55 57H761V0L511.271 23.7V0L160.55 57Z" />
         </svg>
       </div>
       <ol class="reason__list">
