--- a/form.html
+++ b/form.html
@@ -89,13 +89,15 @@
       </svg>
     </div>
     <section class="feedback">
-      <h2 class="feedback__header">
-        Оставьте свой отзыв
-      </h2>
-      <p class="feedback__description">
-        Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о
-        посещенных вами достопримечательностях
-      </p>
+      <div class="feedback__wrapper">
+        <h2 class="feedback__header">
+          Оставьте свой отзыв
+        </h2>
+        <p class="feedback__description">
+          Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о
+          посещенных вами достопримечательностях
+        </p>
+      </div>
     </section>
     <form method="POST" action="https://echo.htmlacademy.ru">
       <fieldset class="form__fieldset">
