--- a/form.html
+++ b/form.html
@@ -48,7 +48,7 @@
     <nav class="menu">
       <ul id="menu-list" class="menu__list">
         <li class="menu__item menu-item">
-          <a class="menu-item__link menu-item__link--current" href="index.html">
+          <a class="menu-item__link" href="index.html">
             <span class="menu-item__text">Главная</span>
           </a>
         </li>
@@ -58,7 +58,7 @@
           </a>
         </li>
         <li class="menu__item menu-item">
-          <a class="menu-item__link" href="form.html">
+          <a class="menu-item__link menu-item__link--current" href="form.html">
             <span class="menu-item__text">Форма отзыва</span>
           </a>
         </li>
